# SignalDesk-AI

./: .gitignore  DESKTOP-SETUP.md  KEYWORDS.md  README.md  cloudflare-tunnel-config.yml  middleware.ts  next.config.ts  package-lock.json  package.json  prod-1271-posts.md  prod-run.md  proxy.ts  start-local.sh  tsconfig.json  vercel.json  vitest.config.ts
.do/: app.yaml
apify-service/: package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: FloatingLines.css  FloatingLines.tsx  ai-assistant-panel.tsx  ask-ai-context.tsx  auth-transition.tsx  desktop-auth-prompt.tsx  desktop-status-bar.tsx  geography-chart.tsx  header.tsx  hero-background.tsx  intent-badge.tsx  lead-chart.tsx  outreach-analytics-section.tsx  outreach-draft-drawer.tsx  pipeline-stage-badge.tsx  platform-badge.tsx  platform-chart.tsx  session-expiry-modal.tsx  sidebar.tsx  stats-card.tsx  status-badge.tsx  theme-toggle.tsx  user-avatar-menu.tsx
docs/: AI-OUTREACH-DRAFTS.md  LEAD-GEOGRAPHY.md  PIPELINE.md  SCRAPING-GUIDE.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
hooks/: use-realtime.ts
lib/: ai-lead-qualifier.test.ts  ai-lead-qualifier.ts  alert-engine.ts  alerts-config.ts  auth.test.ts  auth.ts  authz.ts  cloudflare-tunnel.ts  date-window.test.ts  date-window.ts  deep-link.ts  (+26 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: placeholder.txt
src-tauri/keys/: updater.key.pub
src-tauri/src/: main.rs
(+2789 files in other folders)
